[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musolsong"
version = "2026.0.1.2"
description = "MUSOLSONG Controller and YAML Editor tools applications"
authors = [{name = "Heidy Moreno A.", email = "hmoreno@iac.es"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10.12"
dependencies = [
    "pyyaml>=5.4.1",
    "PyQt6>=6.9.1",
    "musol"    
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Programming Language :: Python"
]
[project.scripts]
musolsong-controller = "musolsong.controller.main:main"
musolsong-yamleditor = "musolsong.yamleditor.main:main"
musolsong-songsimulator = "musolsong.controller.song_server_simulator.main:main"
searchInLogs = "tools.searchLogs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musolsong*", "tools*"]
exclude = ["docs"]

[tool.setuptools.package-data]
"musolsong.controller" = ["etc/*.yaml"]
